update readme + change url

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Flight Booking</title>
   </head>
   <body>
     <div id="root"></div>
